// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 fauoto"
      size="medium"
    />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 fauoto"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 fFXzM"
      color="dodoria.100"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 bWzPzM"
      color="trunks.100"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 aBYIc"
      color="#663399"
      size="medium"
    />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="twoxsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 ehJRCP"
      size="twoxsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 kwvAxI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 fauoto"
      size="xsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 fDOafQ"
    role="progressbar"
    size="small"
  >
    <span
      className="InnerCircle-sc-6khuip-0 fNxYEZ"
      size="small"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 fauoto"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 hwfNCU"
    role="progressbar"
    size="large"
  >
    <span
      className="InnerCircle-sc-6khuip-0 dmOGjN"
      size="large"
    />
  </div>
</div>
`;
